--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   provider: ^5.0.0
   dropdown_formfield: ^0.1.3
+  firebase_auth: ^1.3.0
+  cloud_firestore: ^2.2.1
+  flutter_spinkit: ^5.0.0
   flutter:
     sdk: flutter
 
@@ -43,6 +46,31 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: "Quicksand"
+      fonts:
+        - asset: "fonts/Quicksand-Bold.ttf"
+    - family: "Assistant"
+      fonts:
+        - asset: "fonts/Assistant-SemiBold.ttf"
+    - family: "Poppins"
+      fonts:
+        - asset: "fonts/Poppins-SemiBold.ttf"
+    - family: "Lato-Black"
+      fonts:
+        - asset: "fonts/Lato-Black.ttf"
+    - family: "Lato-Bold"
+      fonts:
+        - asset: "fonts/Lato-Bold.ttf"
+    - family: "Lato-Light"
+      fonts:
+        - asset: "fonts/Lato-Light.ttf"
+    - family: "Lato-Regular"
+      fonts:
+        - asset: "fonts/Lato-Regular.ttf"
+    - family: "Lato-Thin"
+      fonts:
+        - asset: "fonts/Lato-Thin.ttf"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
